# InkNote

./: .gitignore  README.md  index.html  inknote-content.json  package-lock.json  package.json  tsconfig.base.json
.github/workflows/: deploy-web.yml  release-desktop.yml
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/src/: InkNoteLinkedProjectPanel.tsx  NotebookApp.tsx  NotesWorkbench.tsx  main.tsx  notebook.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: favicon.rs  main.rs
apps/web/: index.html  package.json  vite.config.ts
apps/web/public/: 404.html
apps/web/src/: InkNoteNotebookViewer.tsx  SiteAppCategories.tsx  SiteAppV2.tsx  SiteAppWide.tsx  main.tsx  site-modern.css  site.css  site.next.css
assets/: SiteAppWide-B7b_p-eN.js  SiteAppWide-DVgMASZP.js  index-Bel4FPlh.css  index-CAJxTzTZ.js  index-D7krzuXy.js
card-images/gallery/: manifest.json
content/inknotes/5369007/: index.md  notebook.inknote.json
content/inknotes/classical-notes/: index.md  notebook.inknote.json
content/markdown/15-maximum-entropy-irl/: index.md
content/markdown/1521109/: index.md
content/site/: categories.json  navigation.json  site.config.json
docs/: blog-platform-design.md  publishing.md
scripts/: build-web-shell.mjs  configure-tauri-updater.mjs  fetch-konachan-gallery-v2.mjs  fetch-konachan-gallery.mjs  generate-desktop-icon.ps1  konachan-gallery.config.example.json  publish-tauri-updater-manifest.ps1  update-desktop-version.mjs
(+22 files in other folders)
