[package]
name = "inknote-desktop"
version = "0.1.0"
description = "Pseudo handwriting notebook desktop app"
authors = ["Codex"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.1.1", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.3.1", features = [] }
tauri-plugin-dialog = "2.3.1"

[features]
custom-protocol = ["tauri/custom-protocol"]
