[package]
name = "inknote-desktop"
version = "0.1.9"
description = "Pseudo handwriting notebook desktop app"
authors = ["Codex"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.1.1", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25.10", default-features = false, features = ["gif", "ico", "jpeg", "png", "webp"] }
reqwest = { version = "0.13.2", default-features = false, features = ["charset", "rustls", "system-proxy"] }
resvg = { version = "0.47.0", default-features = false }
scraper = "0.27.0"
sha2 = "0.11.0"
tauri = { version = "2.3.1", features = [] }
tauri-plugin-dialog = "2.3.1"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
url = "2.5.8"

[features]
custom-protocol = ["tauri/custom-protocol"]
